--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kju",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "kju.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -12,7 +12,10 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.28.0",
-    "objy": "^0.5.112"
+    "objy": "^0.5.112",
+    "objy-catalog": "0.0.33",
+    "mongoose": "5.10.7"
   }
 }
