--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
+    "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.28.0",
     "mongoose": "5.10.7",
     "objy": "^0.5.112",
     "objy-catalog": "0.0.33",
+    "rate-limit-redis": "^2.0.0",
     "twilio": "^3.49.3"
   }
 }
