--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Marco Boelling",
   "license": "MIT",
   "dependencies": {
+    "@sendgrid/mail": "^6.4.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -17,10 +18,10 @@
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.28.0",
     "mongoose": "5.10.7",
+    "node-fetch": "^2.6.1",
     "objy": "^0.5.112",
     "objy-catalog": "0.0.33",
     "rate-limit-redis": "^2.0.0",
-    "twilio": "^3.49.3",
-    "@sendgrid/mail": "^6.4.0"
+    "twilio": "^3.49.3"
   }
 }
